# py-fastapi-city-temperature-management-api

./: .env.sample  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/routers/: cities.py  temperatures.py
app/core/: config.py
app/crud/: city.py  temperature.py
app/db/: session.py
app/models/: city.py  temperature.py
app/schemas/: city.py  temperature.py
tests/: test_smoke.py
